--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -1,5 +1,5 @@
 ---
-name: "capricoinplus-win-0.18.1.7"
+name: "capricoinplus-win-0.18.1.9"
 enable_cache: true
 sudo: true
 suites:
@@ -32,7 +32,7 @@ script: |
 
   WRAP_DIR=$HOME/wrapped
   HOSTS="i686-w64-mingw32 x86_64-w64-mingw32"
-  CONFIGFLAGS="--enable-reduce-exports --disable-bench --disable-gui-tests --disable-usbdevice"
+  CONFIGFLAGS="--enable-reduce-exports --disable-bench --disable-gui-tests --enable-endomorphism --enable-usbdevice"
   FAKETIME_HOST_PROGS="ar ranlib nm windres strip objcopy"
   FAKETIME_PROGS="date makensis zip"
   HOST_CFLAGS="-O2 -g"
